# ArduinoCoreCMake

./: CMakeLists.txt
